@@ -117,6 +117,10 @@ PANOPTICON_PROXY_NO=
 ## Display Preferences
 ## =============================================================================
 
+# Custom template
+# The template to use. Must be installed under the templates directory.
+PANOPTICON_TEMPLATE=default
+
 # Custom CSS File
 # Which CSS file should be loaded from media/css?
 PANOPTICON_THEME=theme
