@@ -140,6 +140,7 @@ PANOPTICON_BTN_CANCEL=Cancel
 PANOPTICON_BTN_ENABLE=Enable
 PANOPTICON_BTN_DISABLE=Disable
 PANOPTICON_APP_MENU_TITLE_ADMINISTRATION=Administration
+PANOPTICON_APP_TEMPLATE_DEFAULT="Panopticon (Default Template)"
 
 ;; Task Types
 PANOPTICON_TASKTYPE_AKEEBABACKUP=Take a backup with Akeeba Backup
@@ -958,6 +959,8 @@ PANOPTICON_SYSCONFIG_LBL_FIELD_STATS_COLLECTION="Anonymous Usage Statistics Coll
 PANOPTICON_SYSCONFIG_LBL_FIELD_STATS_COLLECTION_HELP="Akeeba Panopticon collects anonymous information about the Panopticon, PHP, and database server version. This aggregated information allows Akeeba to determine which versions of PHP and database servers to support in future releases."
 PANOPTICON_SYSCONFIG_LBL_FIELD_STATS_COLLECTION_HELP_LEARN_MORE="Learn more"
 PANOPTICON_SYSCONFIG_LBL_FIELD_ERROR_REPORTING=Error Reporting
+PANOPTICON_SYSCONFIG_LBL_FIELD_TEMPLATE="Template"
+PANOPTICON_SYSCONFIG_LBL_FIELD_TEMPLATE_HELP="Custom templates must be installed in the <code>templates</code> folder."
 PANOPTICON_SYSCONFIG_LBL_FIELD_THEME="CSS Theme File"
 PANOPTICON_SYSCONFIG_LBL_FIELD_DARKMODE=Dark Mode
 PANOPTICON_SYSCONFIG_LBL_FIELD_FONTSIZE=Font size
