@@ -1,0 +1,1 @@
+{"name":"PANOPTICON_APP_TEMPLATE_DEFAULT"}
