@@ -1,6 +1,7 @@
 <?php die(); ?>
 Akeeba Panopticon 1.0.4
 ================================================================================
++ Support for custom templates [gh-249]
 # [MEDIUM] Cannot access My Profile page [gh-241]
 # [MEDIUM] PHP error in the Extensions Updates page if you have extensions with missing Download Keys [gh-240]
 
